finished fizzbuzz stream